# cuddly-winner

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  pyproject.toml  pytest.ini  railway.json  start-web.sh
.claude/agents/: docs-keeper.md  product-vision-guardian.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
core/: admin.py  context_processors.py  forms.py  i18n.py  middleware.py  models.py  urls.py  views.py
core/api/: serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_document_invite_token_documentmembership.py  0003_add_suggestion_custom_instruction.py  0005_onboarding_document.py
core/templatetags/: app_i18n.py
core/tests/: test_api.py  test_models.py
cuddly_winner/: settings.py  urls.py  wsgi.py
design/: MVP.md  SPECS.md
docs/: design.md  mvp_design.md  product.md  specs.md  todos.md
docs/specs/: 011-plain-markdown-export.md  012-annotated-markdown-export.md  013-export-metadata-bundle.md  014-git-export.md  015-narrative-summary-block.md  016-narrative-summary-document.md  017-narrative-guardrails.md  018-document-visibility.md  019-private-documents.md  020-viewer-role.md  021-enhanced-public-view.md  022-snapshot-public-url.md  023-onboarding-document.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: og-image.html
frontend/src/: App.tsx  main.tsx
scripts/: visual_audit.mjs
services/: github_export.py  llm.py
(+56 files in other folders)
